; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/extr_cma.c_ucma_init_all.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/extr_cma.c_ucma_init_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cma_dev_cnt = common dso_local global i32 0, align 4
@cma_init_cnt = common dso_local global i32 0, align 4
@mut = common dso_local global i32 0, align 4
@cma_dev_array = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @ucma_init_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ucma_init_all() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* @cma_dev_cnt, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %13, label %6

6:                                                ; preds = %0
  %7 = call i32 (...) @ucma_init()
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %6
  %11 = load i32, i32* %3, align 4
  store i32 %11, i32* %1, align 4
  br label %40

12:                                               ; preds = %6
  br label %13

13:                                               ; preds = %12, %0
  %14 = load i32, i32* @cma_init_cnt, align 4
  %15 = load i32, i32* @cma_dev_cnt, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i32 0, i32* %1, align 4
  br label %40

18:                                               ; preds = %13
  %19 = call i32 @pthread_mutex_lock(i32* @mut)
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %34, %18
  %21 = load i32, i32* %2, align 4
  %22 = load i32, i32* @cma_dev_cnt, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %37

24:                                               ; preds = %20
  %25 = load i32*, i32** @cma_dev_array, align 8
  %26 = load i32, i32* %2, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i32, i32* %25, i64 %27
  %29 = call i32 @ucma_init_device(i32* %28)
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* %3, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %24
  br label %37

33:                                               ; preds = %24
  br label %34

34:                                               ; preds = %33
  %35 = load i32, i32* %2, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %2, align 4
  br label %20

37:                                               ; preds = %32, %20
  %38 = call i32 @pthread_mutex_unlock(i32* @mut)
  %39 = load i32, i32* %3, align 4
  store i32 %39, i32* %1, align 4
  br label %40

40:                                               ; preds = %37, %17, %10
  %41 = load i32, i32* %1, align 4
  ret i32 %41
}

declare dso_local i32 @ucma_init(...) #1

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @ucma_init_device(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
